@@ -27,5 +27,6 @@ Zope Changes
       - Collector #2122: fixed missing is_proxying_match definition
         in ZServer/HTTPServer
 
-      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot
+      - Collector #2077: fixed problem with ACTUAL_URL and SiteRoot
 
+      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership
